
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral-membranes"
version = "0.1.0"
description = "Graph- and mesh-spectral morphometrics for cryo-ET membrane meshes"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]
